Linked Armatures without 'Instance Collections': 'Make Proxy' creates Proxy within linked Collection #64763

Closed
opened 2019-05-17 17:48:06 +02:00 by Tristan · 3 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: Quadro 2000/PCIe/SSE2 NVIDIA Corporation 4.4.0

Blender Version
Broken: version: 2.80 (sub 66), branch: master, commit date: 2019-05-16 12:17, hash: e60890075b
Worked: (optional)

Short description of error
After linking Collections with 'Instance Collections' unchecked, 'Make Proxy' for Armatures will create the Proxy within the linked Collection (which should not be editable). Since the linked collection is still immune to other actions, moving the new Proxy out of it creates a duplicate in the outliner.

Blender becomes unstable and may crash at any time the new Proxy is edited; especially on loading a new file though. Saving the file and reopening it within a new Blender instance will fix the issue (since the linked collection is loaded in its original state).

Exact steps for others to reproduce the error
Example: Open the "shot.blend" file and create a proxy for Armature.

link_proxies_no_instance.zip

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: Quadro 2000/PCIe/SSE2 NVIDIA Corporation 4.4.0 **Blender Version** Broken: version: 2.80 (sub 66), branch: master, commit date: 2019-05-16 12:17, hash: `e60890075b` Worked: (optional) **Short description of error** After linking Collections with 'Instance Collections' unchecked, 'Make Proxy' for Armatures will create the Proxy within the linked Collection (which should not be editable). Since the linked collection is still immune to other actions, moving the new Proxy out of it creates a duplicate in the outliner. Blender becomes unstable and may crash at any time the new Proxy is edited; especially on loading a new file though. Saving the file and reopening it within a new Blender instance will fix the issue (since the linked collection is loaded in its original state). **Exact steps for others to reproduce the error** Example: Open the "shot.blend" file and create a proxy for Armature. [link_proxies_no_instance.zip](https://archive.blender.org/developer/F7043617/link_proxies_no_instance.zip)
Author

Added subscriber: @Plyro

Added subscriber: @Plyro
Bastien Montagne self-assigned this 2019-05-21 10:23:17 +02:00

This issue was referenced by 52643bb9e7

This issue was referenced by 52643bb9e7deaaa2da96f202894e159509ce6eb2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64763
No description provided.